--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url(./styles/_fonts.scss);
 
 
 *{
     box-sizing: border-box;
     margin: 0;
-}
+  }
+
+
+@import "swiper/scss";
+@import "swiper/scss/pagination";
