Implemented Register/Authorization

--- a/src/app/components/cars-card/cars-card.component.html
+++ b/src/app/components/cars-card/cars-card.component.html
@@ -3,7 +3,8 @@
     <div class="header_container">
       <div class="title_side">
         <h1 class="car_brand">{{cars[0].brand}}</h1>
-        <h2 class="car_model">{{cars[0].model}}</h2>
+        <h2 class="car_model">{{cars[0].model}}/<span class="car_model year">{{cars[0].year}} წლის</span></h2>
+
       </div>
 
       <div class="favorite_side">
