--- a/src/app/components/cars-card/cars-card.component.scss
+++ b/src/app/components/cars-card/cars-card.component.scss
@@ -40,6 +40,7 @@
 
     .swiper_body{
       width: 100%;
+      margin-top: 12px;
 
       .slide_Image {
         width: 100%;
@@ -61,6 +62,7 @@
       letter-spacing: -0.02em;
       font-size: 14px;
       margin-top: 20px;
+      font-weight: 700;
     }
 
     .price_box{
@@ -104,4 +106,10 @@
       }
     }
   }
+}
+
+
+.year{
+  font-family: 'Noto Sans Georgian', sans-serif;
+
 }
