Added Authorization For User

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@
 
 @import "swiper/scss";
 @import "swiper/scss/pagination";
+
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
