--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -27,8 +27,9 @@
     }
 
     .Login_button{
-      width: 90px;
-      height: 35px;
+      width: 100%;
+      padding: 0 15px;
+      height: 45px;
       border-radius: 8px;
       background-color: #3563e9;
       color: #fff;
