--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar_container">
   <div class="left_side">
-    <img src="../../../assets/Logo.svg" alt="">
+    <img [routerLink]="'/'" class="pointer" src="../../../assets/Logo.svg" alt="">
   </div>
 
 
