--- a/src/app/components/auth-page/auth-page.component.html
+++ b/src/app/components/auth-page/auth-page.component.html
@@ -49,7 +49,8 @@
               />
               <label for="floatingPassword">პაროლი</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-3 RegistrationButton">რეგისტრაცია <img src="../../../assets/arrow-register-right-icon.svg" alt=""></button>
+            <button type="submit" class="btn btn-primary mt-3 mb-3 RegistrationButton">რეგისტრაცია <img src="../../../assets/arrow-register-right-icon.svg" alt=""></button>
+            <a [routerLink]="'/Login'">უკვე ავტორიზებული ხართ?<br> შედით თქვენი ანგარიშით</a>
           </form>
     </div>
 </div>
