--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 
 @import "swiper/scss";
 @import "swiper/scss/pagination";
+@import "./styles/helper";
 
 
 /* Importing Datepicker SCSS file. */
