--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,1 +1,16 @@
 @import "./node_modules/bootstrap/scss/bootstrap";
+
+
+*{
+    font-family: 'Noto Sans Georgian', sans-serif !important;
+}
+
+.Loginbutton{
+    width: 100%;
+    height: 60px;
+}
+
+.container{
+    margin-top: 70px;
+    width: 600px;
+}
