--- a/src/app/components/cars-card/cars-card.component.html
+++ b/src/app/components/cars-card/cars-card.component.html
@@ -15,7 +15,8 @@
     </div>
 
     <div class="swiper_body">
-      <swiper *ngIf="car?.imageUrl1" [slidesPerView]="1" [spaceBetween]="10" [navigation]="true" [pagination]="{ clickable: true }">
+      <swiper *ngIf="car?.imageUrl1" [slidesPerView]="1" [spaceBetween]="10" [navigation]="true"
+        [pagination]="{ clickable: true }">
         <ng-template swiperSlide><img class="slide_Image" src="{{car?.imageUrl1}}" alt=""></ng-template>
         <ng-template swiperSlide><img class="slide_Image" src="{{car?.imageUrl2}}" alt=""></ng-template>
         <ng-template swiperSlide><img class="slide_Image" src="{{car?.imageUrl3}}" alt=""></ng-template>
