--- a/src/app/components/auth-page/auth-page.component.scss
+++ b/src/app/components/auth-page/auth-page.component.scss
@@ -1,4 +1,4 @@
-@import "./node_modules/bootstrap/scss/bootstrap";
+@import "../../../../node_modules/bootstrap/scss/bootstrap";
 
 *{
     font-family: 'Noto Sans Georgian', sans-serif !important;
