Some Minor Price Changes

--- a/src/app/components/cars-card/cars-card.component.html
+++ b/src/app/components/cars-card/cars-card.component.html
@@ -44,7 +44,7 @@
 
     <div class="price_box">
       <div class="price_side">
-        <h1 class="price">₾99.00/</h1>
+        <h1 class="price">{{car?.Price}}/</h1>
         <h2 class="per_day">დღიური</h2>
       </div>
 
