--- a/src/app/components/filtered/filtered.component.html
+++ b/src/app/components/filtered/filtered.component.html
@@ -1,10 +1,12 @@
-<div>
+<div class="form-group">
   <label for="cityInput">City:</label>
-  <input id="cityInput" type="text" [(ngModel)]="cityName" />
+  <select id="cityInput" class="form-control" [(ngModel)]="cityName">
+    <option *ngFor="let city of cities" [value]="city">{{city}}</option>
+  </select>
 </div>
-<div>
+<div class="form-group">
   <label for="yearInput">Year range:</label>
-  <select id="yearInput" [(ngModel)]="yearRange">
+  <select id="yearInput" class="form-control" [(ngModel)]="yearRange">
     <option value="1970-1975">1970-1975</option>
     <option value="1975-1980">1975-1980</option>
     <option value="1980-1985">1980-1985</option>
@@ -18,8 +20,9 @@
     <option value="1900-2025">All</option>
   </select>
 </div>
-<button (click)="getCarsByYearAndCity()">Search</button>
+<button class="btn btn-primary" (click)="getCarsByYearAndCity()">Search</button>
+
 
 <div *ngIf="cars" class="container">
-  <app-cars-card  *ngFor="let car of cars" [car]="car"></app-cars-card>
+  <app-cars-card *ngFor="let car of cars" [car]="car"></app-cars-card>
 </div>
