Added Fetching Data For Cars BY ID

--- a/src/app/components/auth-page/auth-page.component.html
+++ b/src/app/components/auth-page/auth-page.component.html
@@ -23,7 +23,7 @@
                 id="floatingInput"
                 placeholder="გიორგი"
                 name="FirstName"
-                [(ngModel)]="user.FirstName"
+                [(ngModel)]="user.firstName"
               />
               <label for="floatingInput">სახელი</label>
             </div>
