--- a/src/app/components/businnes-auth/businnes-auth.component.scss
+++ b/src/app/components/businnes-auth/businnes-auth.component.scss
@@ -34,7 +34,7 @@
 
     .left_side{
         width: 60%;
-        background-image: url('../../../assets/Decoration_Image.png');
+        background-image: url('../../../assets/Bussines_Reg.png');
         height: 750px;
         background-position-y: -70px ;
         background-repeat: no-repeat;
