--- a/src/app/components/cars-card/cars-card.component.html
+++ b/src/app/components/cars-card/cars-card.component.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="button_side">
-        <button class="rent_button">იქირავე</button>
+        <button (click)="car && onCarClick(car.id)" class="rent_button">იქირავე</button>
       </div>
     </div>
   </div>
