--- a/src/app/components/cars-card/cars-card.component.scss
+++ b/src/app/components/cars-card/cars-card.component.scss
@@ -80,6 +80,7 @@
       justify-content: space-between;
       align-items: center;
       margin-top: 25px;
+      margin-bottom: 30px;
       .price_side{
         display: flex;
         font-family: 'Plus Jakarta Sans';
@@ -100,7 +101,7 @@
 
     .rent_button{
       width: 90px;
-      height: 45px;
+      height: 35px;
       background-color: #3563e9;
       border-radius: 4px;
       border: 0;
