--- a/src/app/components/filtered/filtered.component.scss
+++ b/src/app/components/filtered/filtered.component.scss
@@ -1,1 +1,27 @@
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
+
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+}.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .pagination button {
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #f0f0f0;
+    color: #333;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .pagination button.active {
+    background-color: #333;
+    color: #fff;
+  }
