Added Page For Adding Cars/ Some Minor Changes

--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -30,6 +30,7 @@
             font-weight: 700;
             margin-top: 0;
             text-align: center;
+            user-select: none;
 
         }
     }
