--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,4 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+@import '../node_modules/mapbox-gl/dist/mapbox-gl.css';
