Added Map-Info Card displaying car image distance to it and etc.

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -107,3 +107,10 @@
     }"
   ></mgl-layer>
 </mgl-map>
+
+<app-map-info-box
+  [imageSrc]="infoBoxImageSrc"
+  [distance]="infoBoxDistance"
+  [CarModel]="infoBoxModel"
+  [Carbrand]="infoBoxMark"
+></app-map-info-box>
