--- a/src/app/components/landing-left/landing-left.component.html
+++ b/src/app/components/landing-left/landing-left.component.html
@@ -8,6 +8,6 @@
       <p class="decor_paragraph">არასდროს ყოფილა.</p>
     </div>
 
-    <button class="rent_button">იქირავე</button>
+    <button [routerLink]="'/Filter'" class="rent_button">იქირავე</button>
   </div>
 </div>
