--- a/src/app/components/landing-right/landing-right.component.html
+++ b/src/app/components/landing-right/landing-right.component.html
@@ -8,6 +8,6 @@
       <p class="decor_paragraph">სასურველ ფასში სასურველი დროით.</p>
     </div>
 
-    <button class="rent_button">იქირავე</button>
+    <button [routerLink]="'/Filter'" class="rent_button">იქირავე</button>
   </div>
 </div>
