Added Request For Purchasing Cars

--- a/src/app/components/choose-register-type/choose-register-type.component.html
+++ b/src/app/components/choose-register-type/choose-register-type.component.html
@@ -1,13 +1,22 @@
-<div class="type_container">
-  <div class="inner_container">
-    <div [routerLink]="'/AuthorizationBusiness'" class="left_side pointer">
-      <h1>ჩვენ ვართ ბიზნესი</h1>
-      <p>დარეგისტრირდით როგორც ბიზნესი</p>
-    </div>
+<div class="flex_box">
+  <h1 class="Title">დარეგისტრირდით</h1>
+</div>
 
-    <div [routerLink]="'/AuthorizationUser'" class="right_side pointer">
-      <h1>მე ვარ უბრალო მომხმარებელი</h1>
-      <p>დარეგისტრირდით როგორც უბრალო მომხმარებელი</p>
-    </div>
+
+<div class="flex_box">
+  <div [routerLink]="'/AuthorizationBusiness'" class="left_side pointer">
+    <h1>ბიზსნესი</h1>
+    <p>დარეგისტრირდით როგორც ბიზნესი</p>
   </div>
+
+  <div [routerLink]="'/AuthorizationUser'" class="right_side pointer">
+    <h1>უბრალო მომხმარებელი</h1>
+    <p>დარეგისტრირდით როგორც მომხმარებელი</p>
+  </div>
+</div>
+
+<div class="flex_box2">
+  <h1 class="Title">ან შედით უკვე არსებული ანგარიშით</h1>
+
+  <button class="btn btn-primary" [routerLink]="'/Login'">ავტორიზაცია</button>
 </div>
