Patched Minor Profile Styling For displaying LIked Cars

--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -12,4 +12,7 @@
     </div>
 </div>
 
-<app-favorite-cars></app-favorite-cars>
+<div class="wrapper">
+    <h1 class="liked_cars">თქვენს მიერ მოწონებული მანქანები</h1>
+    <app-favorite-cars></app-favorite-cars>
+</div>
