--- a/src/app/components/choose-register-type/choose-register-type.component.html
+++ b/src/app/components/choose-register-type/choose-register-type.component.html
@@ -1,22 +1,25 @@
-<div class="flex_box">
-  <h1 class="Title">დარეგისტრირდით</h1>
-</div>
-
-
-<div class="flex_box">
-  <div [routerLink]="'/AuthorizationBusiness'" class="left_side pointer">
-    <h1>ბიზსნესი</h1>
-    <p>დარეგისტრირდით როგორც ბიზნესი</p>
+<div class="whole_container">
+  <div class="flex_box">
+    <h1 class="Title">დარეგისტრირდით</h1>
   </div>
-
-  <div [routerLink]="'/AuthorizationUser'" class="right_side pointer">
-    <h1>უბრალო მომხმარებელი</h1>
-    <p>დარეგისტრირდით როგორც მომხმარებელი</p>
+  
+  
+  <div class="flex_box">
+    <div [routerLink]="'/AuthorizationBusiness'" class="left_side pointer">
+      <h1>ბიზსნესი</h1>
+      <p>დარეგისტრირდით როგორც ბიზნესი</p>
+    </div>
+  
+    <div [routerLink]="'/AuthorizationUser'" class="right_side pointer">
+      <h1>უბრალო მომხმარებელი</h1>
+      <p>დარეგისტრირდით როგორც მომხმარებელი</p>
+    </div>
   </div>
-</div>
-
-<div class="flex_box2">
-  <h1 class="Title">ან შედით უკვე არსებული ანგარიშით</h1>
-
-  <button class="btn btn-primary" [routerLink]="'/Login'">ავტორიზაცია</button>
+  
+  <div class="flex_box2">
+    <h1 class="Title">ან შედით უკვე არსებული ანგარიშით</h1>
+  
+    <button class="btn btn-primary" [routerLink]="'/Login'">ავტორიზაცია</button>
+  </div>
+  
 </div>
