--- a/src/app/components/choose-register-type/choose-register-type.component.scss
+++ b/src/app/components/choose-register-type/choose-register-type.component.scss
@@ -7,7 +7,10 @@
   font-family: 'Noto Sans Georgian', sans-serif !important;
 }
 
-
+.whole_container{
+  height: 80vh;
+  width: 100%;
+}
 
 .left_side{
   height: 200px;
