--- a/src/app/components/favorite-cars/favorite-cars.component.html
+++ b/src/app/components/favorite-cars/favorite-cars.component.html
@@ -1,1 +1,4 @@
-<app-cars-card *ngFor="let car of cars" [car]="car"></app-cars-card>
+
+<div class="wrappr">
+    <app-cars-card *ngFor="let car of cars" [car]="car"></app-cars-card>
+</div>
