--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -1,3 +1,8 @@
+*{
+    font-family: 'Noto Sans Georgian', sans-serif !important;
+}
+
+
 .profile_section{
     width: 100%;
     outline: red 1px dotted;
@@ -34,4 +39,20 @@
 
         }
     }
+}
+
+.liked_cars{
+    font-size: 19px;
+    font-weight: 700;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+.wrapper{
+    padding: 0 40px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
 }
