Fixed Sending a Message To Car Owner

--- a/src/app/components/car-rent-detail/car-rent-detail.component.html
+++ b/src/app/components/car-rent-detail/car-rent-detail.component.html
@@ -21,7 +21,7 @@
         <h1>{{car?.price}}₾</h1>
 
         <div>
-          <label for="multiplier">რამდენი დღით გსურთ შეძენა?</label>
+          <label for="multiplier">რამდენი დღით გსურთ ქირაობა?</label>
           <input type="range" id="multiplier" [(ngModel)]="multiplier" min="1" max="30" step="1">
           <span>{{ multiplier }} დღე</span>
           <div *ngIf="car">
