--- a/src/app/components/choose-register-type/choose-register-type.component.scss
+++ b/src/app/components/choose-register-type/choose-register-type.component.scss
@@ -20,6 +20,7 @@
   justify-content: center;
   flex-direction: column;
   background-color: #658DF1;
+  border-radius: 24px;
   color: #fff;
   h1{
     font-size: 25px;
@@ -35,6 +36,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  border-radius: 24px;
 
   h1{
     font-size: 25px;
