--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -38,8 +38,9 @@
     }
 
     .Logout_button{
-      width: 90px;
-      height: 35px;
+      width: 100%;
+      padding:  0 15px;
+      height: 45px;
       border-radius: 8px;
       background-color: #b7821d;
       color: #fff;
