--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="messages">
+<div class="gapper" *ngIf="messages">
   <h1 class="gela" *ngFor="let message of messages">{{message}}</h1>
 </div>
