--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -16,3 +16,6 @@
     <h1 class="liked_cars">თქვენს მიერ მოწონებული მანქანები</h1>
     <app-favorite-cars></app-favorite-cars>
 </div>
+
+
+<app-messages></app-messages>
