--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -18,4 +18,11 @@
 </div>
 
 
-<app-messages></app-messages>
+<div class="wrapper">
+    <h1 class="liked_cars">ნაქირავები მანქანები</h1>
+    <app-taken-cars></app-taken-cars>
+</div>
+
+
+
+
