--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -54,3 +54,13 @@
     justify-content: center;
     flex-direction: column;
 }
+
+.wrapper{
+    padding: 0 40px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
