--- a/src/app/components/businnes-auth/businnes-auth.component.html
+++ b/src/app/components/businnes-auth/businnes-auth.component.html
@@ -1,72 +1,78 @@
 <div class="registration_box">
-    <div class="left_side">
+  <div class="left_side"></div>
 
-    </div>
-
-    <div class="right_side">
-        <form (submit)="onSubmit()" class="needs-validation" novalidate>
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder="599288288"
-                name="phoneNumber"
-                [(ngModel)]="user.phoneNumber"
-              />
-              <label for="floatingInput">ტელეფონის ნომერი</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder="გიორგი"
-                name="FirstName"
-                [(ngModel)]="user.firstName"
-              />
-              <label for="floatingInput">სახელი</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input
-                type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder="დოლაბერიძე"
-                name="LastName"
-                [(ngModel)]="user.lastName"
-              />
-              <label for="floatingInput">გვარი</label>
-            </div>
-            <div class="form-floating">
-              <input
-                type="password"
-                name="password"
-                [(ngModel)]="user.password"
-                class="form-control"
-                id="floatingPassword"
-                placeholder="Password"
-              />
-              <label for="floatingPassword">პაროლი</label>
-            </div>
-            <button type="submit" class="btn btn-primary mt-3 mb-3 RegistrationButton">რეგისტრაცია <img src="../../../assets/arrow-register-right-icon.svg" alt=""></button>
-            <a [routerLink]="'/Login'">უკვე ავტორიზებული ხართ?<br> შედით თქვენი ანგარიშით</a>
-            <br>
-          </form>
-    </div>
+  <div class="right_side">
+    <form (submit)="onSubmit()" class="needs-validation" novalidate>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder="599288288"
+          name="phoneNumber"
+          [(ngModel)]="user.phoneNumber"
+        />
+        <label for="floatingInput">ტელეფონის ნომერი</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder="გიორგი"
+          name="FirstName"
+          [(ngModel)]="user.firstName"
+        />
+        <label for="floatingInput">სახელი</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder="yourBusinnes@gmail.com"
+          name="email"
+          [(ngModel)]="user.email"
+        />
+        <label for="floatingInput">სახელი</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder="დოლაბერიძე"
+          name="LastName"
+          [(ngModel)]="user.lastName"
+        />
+        <label for="floatingInput">გვარი</label>
+      </div>
+      <div class="form-floating">
+        <input
+          type="password"
+          name="password"
+          [(ngModel)]="user.password"
+          class="form-control"
+          id="floatingPassword"
+          placeholder="Password"
+        />
+        <label for="floatingPassword">პაროლი</label>
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary mt-3 mb-3 RegistrationButton"
+      >
+        რეგისტრაცია
+        <img src="../../../assets/arrow-register-right-icon.svg" alt="" />
+      </button>
+      <a [routerLink]="'/Login'"
+        >უკვე ავტორიზებული ხართ?<br />
+        შედით თქვენი ანგარიშით</a
+      >
+      <br />
+    </form>
+  </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- <div class="container">
     <form (submit)="onSubmit()" class="needs-validation" novalidate>
@@ -117,5 +123,3 @@
         <button type="submit" class="btn btn-primary mt-3">რეგისტრაცია</button>
       </form>
 </div> -->
-
-
